# python-fastapi-boilertemplate

./: .gitignore  README.md  alembic.ini  makefile  manage.py  mypy.ini  pyproject.toml
app/: main.py
app/models/: base.py  base_class.py  box.py  const.py  mixin.py  notice.py  notice_category.py  user.py  user_grade.py  wod.py  wod_by_level.py  wod_instant_team.py  wod_level.py  wod_ranking_statistics.py  wod_record.py
git-hooks/: install_hooks.sh  pre-commit  pre-push
migrations/: env.py
migrations/versions/: 2023_01_15_2158-5ec1a5109ef0_initalize_entity.py
tests/: test_router.py
